@@ -5,6 +5,7 @@ git-annex (0.20110523) UNRELEASED; urgency=low
     `git reset`, and only running `git checkout` once, even when many files
     are being locked.
   * Fix locking of files with staged changes.
+  * Somewhat sped up `git commit` of modifications to unlocked files.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 28 May 2011 22:29:37 -0400
 
